[package]
name = "H3glObe"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core graphics and windowing dependencies
winit = "0.30.9"
wgpu = "25.0.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
pollster = "0.4.0"

# H3 geospatial indexing system
h3o = { version = "0.8.0", features = ["std", "geo", "serde"] }
geo = "0.26.0"  # Explicit dependency on geo for polygon support

# Math libraries
glam = "0.30.2"
cgmath = "0.18.0"

# Other utilities
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["rt", "sync", "rt-multi-thread"] }
serde = "1.0.219"
futures = "0.3.31"
futures-intrusive = "0.5.0"  # Added for oneshot_channel

# GeoTIFF and elevation data processing dependencies
gdal = { version = "0.16.0", features = ["array", "bindgen"] }
rayon = "1.8.0"  # For parallel processing
once_cell = "1.19.0"  # For lazy initialization
